@@ -14,9 +14,6 @@
 
 namespace Castle.ActiveRecord.Tests
 {
-	using System;
-	using System.Text;
-	using System.Reflection;
 	using System.Collections.Generic;
 
 	using NUnit.Framework;
