@@ -330,6 +330,7 @@
     <Compile Include="CompositeUserTypeTestCase.cs" />
     <Compile Include="Config\ConfigureTests.cs" />
     <Compile Include="Config\StorageConfigurationTests.cs" />
+    <Compile Include="DefaultConfigurationsTestCase.cs" />
     <Compile Include="Model\CompositeUserType\BadProduct.cs" />
     <Compile Include="Model\ProductWithGuid.cs" />
     <Compile Include="NHSearchTestCase.cs" />
